--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Tic Tac Toe</title>
 </head>
 
@@ -25,7 +25,7 @@
         <h2></h2>
         <button class="reset-btn btn" role="button">Reset Game</button>
     </main>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
